--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,31 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+/* Iphone Retina (iOS) */
+img,
+video {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+}
+
+@supports (image-rendering: -webkit-optimize-contrast) {
+  img {
+    image-rendering: -webkit-optimize-contrast;
+  }
+}
+
+/* Iphone use GPU */
+[class*='backdrop-blur'] {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+
+  will-change: backdrop-filter;
+}
 
 :root {
   --brand-black: #0f1115;
@@ -35,7 +62,11 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family:
-    var(--font-sans), system-ui, -apple-system, "Segoe UI", sans-serif;
+    var(--font-sans),
+    system-ui,
+    -apple-system,
+    'Segoe UI',
+    sans-serif;
 }
 
 .building-menu img {
